force-app/main/default/objects/synety__Campaign_Contact_Transfer_Rule_Detail__c/synety__Campaign_Contact_Transfer_Rule_Detail__c.object-meta.xml
<CustomObject>
    <label>Campaign Contact Transfer Rule Detail</label>
    <nameField>
        <label>Campaign Contact Transfer Rule Detail Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Contact Transfer Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>