force-app/main/default/objects/synety__Campaign_Contact_Transfer_Rule_Detail__c/fields/synety__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>