force-app/main/default/objects/synety__Campaign_Contact_Transfer_Rule_Detail__c/fields/synety__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>synety__Field_Value__c</fullName>
    <label>Field Value</label>
    <type>TextArea</type>
</CustomField>