force-app/main/default/objects/synety__Campaign_Contact_Transfer_Rule_Detail__c/fields/synety__Get_Date__c.field-meta.xml
<CustomField>
    <fullName>synety__Get_Date__c</fullName>
    <label>Get Date</label>
    <type>Date</type>
</CustomField>