force-app/main/default/objects/synety__Campaign_Contact_Transfer_Rule_Detail__c/fields/synety__Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>synety__Rule_ID__c</fullName>
    <label>Rule ID</label>
    <referenceTo>synety__Synety_Campaign_Contact_Transfer_Rule__c</referenceTo>
    <relationshipLabel>Campaign Contact Transfer Rule Details</relationshipLabel>
    <relationshipName>Campaign_Contact_Transfer_Rule_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>